--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -173,7 +173,7 @@
                 android:layout_width="60dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/imageView"
-                android:src="@drawable/icon_QQ"
+                android:src="@drawable/icon_qq"
                 android:layout_weight="1" />
 
             <ImageView
