--- a/app/src/main/res/layout/activity_scenicspot.xml
+++ b/app/src/main/res/layout/activity_scenicspot.xml
@@ -2,5 +2,29 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentTop="true"
+        android:id="@+id/scenicspot_top_ll"
+        android:orientation="horizontal"
+        android:background="#F8F8F8">
+        <!--<ImageView-->
+            <!--android:layout_width="30dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:src=""-->
+            <!--android:layout_gravity="center"-->
+            <!--android:id="@+id/myTeam_back"-->
+            <!--/>-->
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="景区详情"
+            android:textSize="20dp"
+            android:textColor="#4d4d4d"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_marginRight="30dp"/>
+    </LinearLayout>
 
 </LinearLayout>
