--- a/app/src/main/res/layout/register2.xml
+++ b/app/src/main/res/layout/register2.xml
@@ -57,7 +57,7 @@
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:id="@+id/rs_lg"
+                android:id="@+id/rs2_lg"
                 android:src="@drawable/user"
                 android:layout_marginRight="3dp" />
 
@@ -69,8 +69,8 @@
                 <EditText
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/rs_et"
-                    android:hint="请输入手机号码"
+                    android:id="@+id/rs2_yx"
+                    android:hint="请输入邮箱"
                     android:textColor="#ffffff"
                     android:textColorHint="#ffffff"
                     android:singleLine="false"
@@ -96,12 +96,18 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center">
 
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:id="@+id/rs2_pw"
+                android:src="@drawable/lock"
+                android:layout_marginRight="3dp" />
+
             <LinearLayout
                 android:orientation="vertical"
-                android:layout_width="126dp"
+                android:layout_width="237dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="5dp">
+                android:id="@+id/rs2_pwd">
 
                 <LinearLayout
                     android:orientation="horizontal"
@@ -111,14 +117,14 @@
                     <EditText
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/rs_pwd"
-                        android:hint="请输入验证码"
+                        android:id="@+id/rs_et2"
+                        android:hint="请输入密码"
                         android:textColor="#ffffff"
                         android:textColorHint="#ffffff"
-                        android:textSize="16dp"
+                        android:textSize="18dp"
                         android:background="@drawable/abc_action_bar_item_background_material"
                         android:paddingLeft="5dp"
-                        android:password="false" />
+                        android:password="true" />
 
                 </LinearLayout>
 
@@ -128,32 +134,61 @@
                     android:layout_height="1dp"
                     android:background="#ffffff"
                     android:layout_marginTop="5dp"></LinearLayout>
-
             </LinearLayout>
 
-            <Button
-                android:layout_width="88dp"
-                android:layout_height="35dp"
-                android:text="获取验证码"
-                android:id="@+id/button6"
-                android:textSize="14dp"
-                android:background="@drawable/add_managebg1"
-                android:textColor="#555555"
-                android:layout_gravity="right"
-                android:layout_marginLeft="22dp" />
+        </LinearLayout>
 
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="280dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="15dp"
+            android:layout_marginTop="30dp" >
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:id="@+id/rs2_lock2"
+                android:src="@drawable/lock1"
+                android:layout_marginRight="3dp" />
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="237dp"
+                android:layout_height="wrap_content" >
+
+                <EditText
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/rs_et3"
+                    android:hint="请再次输入密码"
+                    android:textColor="#ffffff"
+                    android:textColorHint="#ffffff"
+                    android:singleLine="false"
+                    android:textSize="18dp"
+                    android:background="@drawable/abc_action_bar_item_background_material"
+                    android:paddingLeft="5dp" />
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="#ffffff"
+                    android:layout_marginTop="5dp" />
+            </LinearLayout>
         </LinearLayout>
 
         <Button
             android:layout_width="280dp"
             android:layout_height="36dp"
             android:text="注册"
-            android:id="@+id/button5"
+            android:id="@+id/rs2_bt"
             android:background="@drawable/add_managebg"
             android:textColor="#ffffff"
             android:layout_gravity="center_horizontal"
-            android:textSize="20dp"
-            android:layout_marginTop="150dp" />
+            android:layout_marginTop="80dp"
+            android:textSize="20dp" />
     </LinearLayout>
 
 </LinearLayout>
