--- a/app/src/main/res/layout/activity_scenicspot.xml
+++ b/app/src/main/res/layout/activity_scenicspot.xml
@@ -9,13 +9,13 @@
         android:id="@+id/scenicspot_top_ll"
         android:orientation="horizontal"
         android:background="#F8F8F8">
-        <!--<ImageView-->
-            <!--android:layout_width="30dp"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:src=""-->
-            <!--android:layout_gravity="center"-->
-            <!--android:id="@+id/myTeam_back"-->
-            <!--/>-->
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="wrap_content"
+            android:src="@drawable/return2"
+            android:layout_gravity="center"
+            android:id="@+id/scenicspot_back_img"
+            />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -26,5 +26,13 @@
             android:gravity="center"
             android:layout_marginRight="30dp"/>
     </LinearLayout>
-
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="256dp">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/imperialpalace"
+            android:scaleType="fitXY"/>
+    </RelativeLayout>
 </LinearLayout>
